implement calculate of quantity rule
